--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo.png" class="logo" alt="" />
+      <img src="images/logo-e9868271.png" class="logo" alt="" />
         <div class="lang-selector">
               <a href="#" data-language-name="plaintext">plaintext</a>
         </div>
