--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 <li>BTC-USD: Bitcoin/USD spot price</li>
 </ul>
 <h1 id='websocket-api'>Websocket API</h1><h2 id='connectivity-alpha'>Connectivity (alpha)</h2>
-<p>wss://clob-alpha.dura.fi:36821</p>
+<p>api.prodigy.fi</p>
 <h2 id='authorization'>Authorization</h2>
 <p>Please contact your Prodigy representative to request an Alpha CLOB token for your connectivity.</p>
 
